# agent-skills

./: .gitignore  LICENSE  README.md
examples/: alignment-ledger.md  diagrammer.md  grill-me-lite.md
skills/alignment-ledger/: SKILL.md
skills/diagrammer/: SKILL.md  pyproject.toml
skills/diagrammer/diagrammer/: __init__.py  cli.py  compiler.py  contracts.py  edge_labels.py  example_gate.py  layout.py  metrics.py  port_geometry.py  render.py  renderer.py  review.py  route_paths.py  routing.py  shapes.py  validate_svg.py
skills/diagrammer/evals/: evals.json
skills/diagrammer/fixtures/current-state/: order-intake-reliability.def.json  order-payment-reconciliation-auto.def.json  payment-webhook-reconciliation.def.json  semantic-shapes-showcase.def.json  ticketing-onsale.def.json
skills/diagrammer/fixtures/exploration/: reciprocal-cloud-api.def.json  reciprocal-offset-db.def.json  reciprocal-queue-db.def.json  reciprocal-same-lane-db.def.json
skills/diagrammer/fixtures/simple/: approval-flow.def.json  basic-web-app.def.json  webhook-retry.def.json
skills/diagrammer/fixtures/stress/: incident-response.def.json  mobile-onboarding.def.json  ticketmaster-system.def.json  warehouse-ingestion.def.json
skills/diagrammer/references/: compiler-pipeline.md  diagram-principles.md  figjam-theme.md
skills/diagrammer/scripts/: check_examples.py  compile_diagram.py  render.py  validate_svg.py
skills/diagrammer/tests/: test_compile_diagram.py
skills/grill-me-lite/: SKILL.md
